--- a/config/database.yml
+++ b/config/database.yml
@@ -18,6 +18,7 @@ development:
   adapter: postgresql
   encoding: unicode
   database: playmotrade_development
+  host: localhost
   pool: 5
   username: playmotrade
   password: r2d2c3po
@@ -47,6 +48,7 @@ test:
   adapter: postgresql
   encoding: unicode
   database: playmotrade_test
+  host: localhost
   pool: 5
   username: playmotrade
   password: r2d2c3po
@@ -55,6 +57,7 @@ production:
   adapter: postgresql
   encoding: unicode
   database: playmotrade_production
+  host: localhost
   pool: 5
   username: playmotrade
   password: r2d2c3po
