--- a/config/database.yml
+++ b/config/database.yml
@@ -20,8 +20,8 @@ development:
   database: playmotrade_development
   host: localhost
   pool: 5
-  username: playmotrade
-  password: r2d2c3po
+  # username: playmotrade
+  # password: r2d2c3po
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
