--- a/config/tinymce.yml
+++ b/config/tinymce.yml
@@ -39,6 +39,7 @@ default:
     - removeformat
     - charmap
     - visualaid
+    - image
   theme_advanced_toolbar_location: top
   theme_advanced_toolbar_align: left
   theme_advanced_statusbar_location: bottom
