--- a/config/tinymce.yml
+++ b/config/tinymce.yml
@@ -12,6 +12,7 @@ default:
     - fullscreen
     - visualchars
     - nonbreaking
+    - uploadimage
   theme_advanced_buttons1:
     - bold
     - italic
