CHORE: add ability to add links in TinyMCE

--- a/config/tinymce.yml
+++ b/config/tinymce.yml
@@ -13,6 +13,7 @@ default:
     - visualchars
     - nonbreaking
     - uploadimage
+    - link
   theme_advanced_buttons1:
     - bold
     - italic
